--- a/CStoreDBMS/CStoreEngine/CStoreEngine.vcxproj.filters
+++ b/CStoreDBMS/CStoreEngine/CStoreEngine.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="DBCBase.h">
       <Filter>DBCompiler</Filter>
     </ClInclude>
+    <ClInclude Include="DBCProxy.hpp">
+      <Filter>DBCompiler</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DBServices.cpp">
